--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,11 @@ Language: es
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    sooty
+    sooty (>= 0.1.0.9002)
 Suggests: 
     knitr,
     rmarkdown
 VignetteBuilder: knitr
 URL: https://github.com/mdsumner/sooty.watch
 BugReports: https://github.com/mdsumner/sooty.watch/issues
+Remotes: mdsumner/sooty
