--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sooty.watch
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9001
+Version: 0.0.1.9001
 Authors@R: 
     person("Michael D.", "Sumner", , "mdsumner@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -10,11 +10,11 @@ Language: es
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    sooty (>= 0.1.0.9002)
+    sooty (>= 0.1.1.9000)
 Suggests: 
     knitr,
     rmarkdown
 VignetteBuilder: knitr
 URL: https://github.com/mdsumner/sooty.watch
 BugReports: https://github.com/mdsumner/sooty.watch/issues
-Remotes: mdsumner/sooty
+Remotes: mdsumner/sooty@S7
