--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -12,6 +12,10 @@ name: pkgdown.yaml
 
 permissions: read-all
 
+concurrency:
+     group: ${{ github.workflow }}-${{ github.ref }}
+     cancel-in-progress: true
+
 jobs:
   pkgdown:
     runs-on: ubuntu-latest
