--- a/.github/workflows/pkgdown_cron.yaml
+++ b/.github/workflows/pkgdown_cron.yaml
@@ -2,7 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   schedule:
-    - cron: '0 21 * * * '
+    - cron: '0 21 * */2 *'
   push:
     branches: [main]
   pull_request:
@@ -13,6 +13,10 @@ on:
 name: pkgdown.yaml
 
 permissions: read-all
+
+concurrency:
+     group: ${{ github.workflow }}-${{ github.ref }}
+     cancel-in-progress: true
 
 jobs:
   pkgdown:
